<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
     <include layout="@layout/common_title_layout" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/schedule_add_title"
                android:layout_width="match_parent"
                android:layout_height="35.0dp"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:background="@drawable/selector_common_edittext_normal"
                android:hint="@string/schedule_title_hint"
                android:paddingLeft="5.0dip"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/schedule_add_is_all_day_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:text="@string/schedule_is_addday_title_hint"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/checkbox_is_allday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="5.0dip" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/schedule_add_be_time_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/schedule_from_time_target"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10.0dip" />

                <TextView
                    android:id="@+id/schedule_add_time_from"
                    android:layout_width="match_parent"
                    android:layout_height="35.0dp"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_toLeftOf="@+id/schedule_from_time_target"
                    android:background="@drawable/selector_common_edittext_normal"
                    android:gravity="center_vertical"
                    android:hint="@string/schedule_begin_time_hint"
                    android:paddingLeft="5.0dip"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/schedule_add_time_end"
                    android:layout_width="match_parent"
                    android:layout_height="35.0dp"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_toRightOf="@+id/schedule_from_time_target"
                    android:background="@drawable/selector_common_edittext_normal"
                    android:gravity="center_vertical"
                    android:hint="@string/schedule_end_time_hint"
                    android:paddingLeft="5.0dip"
                    android:singleLine="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/schedule_notice_time"
                android:layout_width="match_parent"
                android:layout_height="35.0dp"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:gravity="center_vertical"
                android:hint="@string/schedule_notice_time_hint"
                android:background="@drawable/selector_common_edittext_normal"
                android:paddingLeft="5.0dip"
                android:singleLine="true" />

            <EditText
                android:id="@+id/schedule_add_content"
                android:layout_width="match_parent"
                android:layout_height="80.0dp"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/selector_common_edittext_normal"
                android:gravity="top|left"
                android:hint="@string/schedule_content_hint"
                android:paddingLeft="5.0dip" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:text="@string/system_notice"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/checkbox_notice_system"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="5.0dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:text="@string/email_notice"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/checkbox_notice_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="5.0dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:text="@string/message_notice"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/checkbox_notice_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="5.0dip" />
            </LinearLayout>

            <Button
                android:id="@+id/schedule_select_contacts_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:text="@string/select_contacts"
                android:textColor="@color/black" />

          
        </LinearLayout>
    

         <ScrollView
            android:id="@+id/schedule_notice_members"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dp"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:background="@drawable/selector_common_edittext_normal">
    		<LinearLayout
    		    android:id="@+id/schedule_notice_members_container"
    		    android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:orientation="vertical"
    		    >
    		    
    		    
    		    
    		</LinearLayout>
    	</ScrollView>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_buttonHeight"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_button"
            android:text="@string/ok"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_buttonHeight"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_clear_button"
            android:text="@string/cancle"
            android:textColor="@color/white" />
    </LinearLayout>
  </LinearLayout>
    </ScrollView>
</LinearLayout>