<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_title_background_color" >

        <TextView
            android:id="@+id/title_common_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_height"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/common_title_textsize" />

        <LinearLayout
            android:id="@+id/oa_contacts_menu_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_height"
            android:layout_below="@+id/title_common_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/completion_menu_construction_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/common_color"
                android:text="@string/construct_item"
                android:textColor="@color/white" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/completion_menu_machine_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/machine"
                android:textColor="@color/black" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/completion_menu_member_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/member"
                android:textColor="@color/black" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/completion_menu_others_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/others"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/completion_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_container"
        android:layout_below="@+id/title_container"
        android:flipInterval="30" />

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_rowHeight"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/progress_plan_report_save_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_button"
            android:text="@string/save"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/progress_plan_report_clear_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_clear_button"
            android:text="@string/clear"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>