<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/editReason_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/reason"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/editReason"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@drawable/selector_common_edittext_normal"
        android:gravity="top|left" />
    
    <TextView
        android:id="@+id/editQuestion_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/question"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/editQuestion"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@drawable/selector_common_edittext_normal"
        android:gravity="top|left" />
    
    <TextView
        android:id="@+id/editRemark_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/remark"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/editRemark"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@drawable/selector_common_edittext_normal"
        android:gravity="top|left" />
    
</LinearLayout>